<resources>
    <string name="app_name">Gebetszeiten Nürnberg</string>
    <string name="descriptions">Descriptions</string>
    <string name="text_fajer">الفجر</string>
    <string name="text_sunrise">الشروق</string>
    <string name="text_isha">العشاء</string>
    <string name="text_maghrib">المغرب</string>
    <string name="text_duhr">الظهر</string>
    <string name="text_asr">العصر</string>
    <string name="test_time">04:00</string>
    <string name="text_remaining_prayer_time">الوقت المتبقي لصلاة</string>
    <string name="text_remaining_time">الوقت المتبقي</string>
    <string name="test_sun_date"> 3 آيار 2018م</string>
    <string name="test_moon_date">23 صفر 1439 هـ</string>
    <string name="test_day">الإثنين</string>
    <string name="text_error_check_internet">يرجى التحقق من اتصال الانترنيت لتحديث أوقات الصلاة</string>
    <string name="text_error_server_down">حدث خطأ ما يرجى المحاولة لاحقاً</string>
    <string name="text_error_server_no_data">لا يوجد بيانات متوفرة يرجى المحاولة لاحقاًً</string>
    <string name="text_error_retry_button">أعد المحاولة لاحقاً</string>
    <string name="text_date_separator">/</string>
    <string name="text_moon_month_footer">هـ</string>
    <string name="text_sun_month_footer">م</string>
    <string name="text_moon_month_muhram">محرم</string>
    <string name="text_moon_month_safer">صفر</string>
    <string name="text_moon_month_rabi_aoul">ربيع الأول</string>
    <string name="text_moon_month_rabi_aker">ربيع الآخر</string>
    <string name="text_moon_month_gamada_aoul">جمادى الأول</string>
    <string name="text_moon_month_gamada_aker">جمادى الآخر</string>
    <string name="text_moon_month_rajb">رجب</string>
    <string name="text_moon_month_shaban">شعبان</string>
    <string name="text_moon_month_ramadan">رمضان</string>
    <string name="text_moon_month_shual">شوال</string>
    <string name="text_moon_month_zo_kada">ذو القعدة</string>
    <string name="text_moon_month_zo_haga">ذو الحجة</string>
    <string name="text_sun_month_jan">كانون الثاني</string>
    <string name="text_sun_month_feb">شباط</string>
    <string name="text_sun_month_mar">آذار</string>
    <string name="text_sun_month_apr">نيسان</string>
    <string name="text_sun_month_may">أيار</string>
    <string name="text_sun_month_jun">حزيران</string>
    <string name="text_sun_month_jul">تموز</string>
    <string name="text_sun_month_aug">آب</string>
    <string name="text_sun_month_sep">أيلول</string>
    <string name="text_sun_month_oct">تشرين الأول</string>
    <string name="text_sun_month_nov">تشرين الثاني</string>
    <string name="text_sun_month_dec">كانون الأول</string>
    <string name="text_day_sun">الأحد</string>
    <string name="text_day_mon">الإثنين</string>
    <string name="text_day_tue">الثلاثاء</string>
    <string name="text_day_web">الأربعاء</string>
    <string name="text_day_thr">الخميس</string>
    <string name="text_day_fri">الجمعة</string>
    <string name="text_day_sat">السبت</string>
    <string name="text_prayer_fajer">الفجر</string>
    <string name="text_prayer_sunrise">الشروق</string>
    <string name="text_prayer_day_sunrise">للشروق</string>
    <string name="text_prayer_duhr">الظهر</string>
    <string name="text_prayer_asr">العصر</string>
    <string name="text_prayer_maghrib">المغرب</string>
    <string name="text_prayer_isha">العشاء</string>
    <string name="text_now_prayer_time">حان الأن وقت صلاة</string>
    <string name="text_now_time_sunrise">حان الأن وقت الشروق</string>
    <string name="text_settings_notifiaction">التنبيه لأوقات الصلاة</string>
    <string name="text_alarm_full_athan">الأذان كاملاً</string>
    <string name="text_alarm_half_athan">تكبيرة الأذان</string>
    <string name="text_alarm_tone">نغمة تنبيه</string>
    <string name="text_alarm_silent">صامت (إشعار فقط)</string>
    <string name="text_settings_title">الإعدادات</string>
    <string name="text_settings_switch_title">إشعارات الصلاة</string>
    <string name="text_midnight_time_title">لمنتصف الليل</string>
    <string name="text_settings_privacy_policy">سياسة الخصوصية</string>
    <string name="text_settings_about_us">حول التطبيق</string>
    <string name="text_notification_alarm_permission_dialog_title">هل تريد تفعيل التنبيهات؟</string>
    <string name="text_notification_permission_dialog_title">هل تريد تفعيل الإشعارات؟</string>
    <string name="text_notification_alarm_permission_dialog_message">لتفعيل الإشعارات يجب منح التطبيق أذن إضافي ليتمكن من ضبط تنبيهات أوقات الصلاة</string>
    <string name="text_notification_alarm_permission_dialog_denied_title">لم يتم تفعيل التنبيهات!</string>
    <string name="text_notification_alarm_permission_dialog_denied_message">لم يتم إعطاء التطبيق الأذونات الازمة يرجى المحاولة مرة ثانية</string>
    <string name="text_notification_permission_dialog_okay">موافق</string>
    <string name="text_notification_permission_dialog_confirm">نعم</string>
    <string name="text_notification_permission_dialog_dismiss">لا</string>
    <string name="text_notification_permission_denied_title">تفعيل التنبيهات</string>
    <string name="text_notification_permission_denied_message">يجب تفعيل الإشعارات لنتمكن من إظهار رسائل التنبيه عندما يحين وقت الصلات</string>
    <string name="text_notification_permission_go_to_settings">فتح الإعدادات</string>
    <string name="text_notification_selected_prayers">التنبيه للصلوات المختارة:</string>
    <string name="content_descriptor_settings_icon">settings icon</string>
    <string name="content_descriptor_background">Background with moon or sun</string>
    <string name="content_descriptor_back_arrow">back to menu</string>
    <string name="sunrise_notification_channel_settings">Sunrise Notification</string>
    <string name="sunrise_notification_channel_id">notification_channel</string>
    <string name="sunrise_notifications_channel_description">Sunrise Settings</string>
    <string name="notification_channel_Id">athan_channel</string>
    <string name="notification_channel_settings">Athan Notification</string>
    <string name="notification_channel_description">Athan Settings</string>
    <string name="asset_url_privacy_policy">file:///android_asset/privacy_policy.html</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_item_icon_content_description">menu item icon</string>
    <string name="loading_screen_icon_content_description">A man is in sgoud position</string>
</resources>
