<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layoutDirection="rtl">

        <TextView
            android:id="@+id/notification_next_prayer_banner_text"
            style="@style/TextDarkStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_4"
            android:text="@string/text_remaining_prayer_time" />

        <TextView
            android:id="@+id/notification_next_prayer_text"
            style="@style/TextDarkStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_4"
            android:text="@string/text_isha"
            tools:text="@string/text_isha" />

        <TextView
            android:id="@+id/notification_next_prayer_time"
            style="@style/TextDarkStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_4"
            android:text="@string/test_time"
            tools:text="@string/test_time" />
    </LinearLayout>

</LinearLayout>