<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gals.prayertimes.viewmodel.AthanSettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textDirection="rtl"
        tools:context=".view.AthanSettingsFragment">

        <LinearLayout
            android:id="@+id/view_layout_alarm_switch"
            style="@style/FragmentAthanAlarmSwitchViewStyle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchAlarmOn"
                style="@style/FragmentAthanAlarmSwitchStyle"
                android:checked="@{viewModel.alarm}"
                android:onCheckedChanged="@{(id,checked)-> viewModel.alarmToggle(checked)}" />

            <TextView
                style="@style/FragmentAthanAlarmSwitchTextStyle"
                android:text="@string/text_alarm_settings" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group_athan_alarm_type"
            style="@style/FragmentAthanRadioGroupStyle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_layout_alarm_switch">

            <RadioButton
                android:id="@+id/radio_button_athan_full"
                style="@style/FragmentAthanRadioButtonFullStyle"
                android:checked="@={viewModel.radioGroupObserver.fullAthan}"
                android:enabled="@{viewModel.alarm}" />

            <RadioButton
                android:id="@+id/radio_button_athan_half"
                style="@style/FragmentAthanRadioButtonHalfStyle"
                android:checked="@={viewModel.radioGroupObserver.halfAthan}"
                android:enabled="@{viewModel.alarm}" />

            <RadioButton
                android:id="@+id/radio_button_athan_tone"
                style="@style/FragmentAthanRadioButtonToneStyle"
                android:checked="@={viewModel.radioGroupObserver.toneAthan}"
                android:enabled="@{viewModel.alarm}" />

            <RadioButton
                android:id="@+id/radio_button_athan_silent"
                style="@style/FragmentAthanRadioButtonSilentStyle"
                android:checked="@={viewModel.radioGroupObserver.silentAthan}"
                android:enabled="@{viewModel.alarm}" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/view_athan_alarm_full"
            style="@style/FragmentAthanFullViewStyle"
            app:layout_constraintEnd_toStartOf="@id/radio_group_athan_alarm_type"
            app:layout_constraintRight_toLeftOf="@+id/radio_group_athan_alarm_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_layout_alarm_switch">

            <ImageButton
                android:id="@+id/playFullAthan"
                style="@style/FragmentAthanFullImageButtonStyle"
                android:onClick="@{()->viewModel.playFullAthan()}"
                app:goneUnless="@{viewModel.athanFullVisibility}"
                app:imageResource="@{viewModel.isPlaying? android.R.drawable.ic_media_pause: android.R.drawable.ic_media_play}" />

            <TextView
                style="@style/FragmentAthanFullTextStyle"
                android:text="@string/text_alarm_full_athan" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_athan_alarm_half"
            style="@style/FragmentAthanHalfViewStyle"
            app:layout_constraintEnd_toStartOf="@id/radio_group_athan_alarm_type"
            app:layout_constraintRight_toLeftOf="@+id/radio_group_athan_alarm_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_athan_alarm_full">

            <ImageButton
                android:id="@+id/playHalfAthan"
                style="@style/FragmentAthanHalfImageButtonStyle"
                android:onClick="@{()-> viewModel.playHalfAthan()}"
                app:goneUnless="@{viewModel.athanHalfVisibility}"
                app:imageResource="@{viewModel.isPlaying? android.R.drawable.ic_media_pause: android.R.drawable.ic_media_play}" />

            <TextView
                style="@style/FragmentAthanHalfTextStyle"
                android:text="@string/text_alarm_half_athan" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_athan_alarm_tone"
            style="@style/FragmentAthanToneViewStyle"
            app:layout_constraintEnd_toStartOf="@id/radio_group_athan_alarm_type"
            app:layout_constraintRight_toLeftOf="@+id/radio_group_athan_alarm_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_athan_alarm_half">

            <ImageButton
                android:id="@+id/playToneAthan"
                style="@style/FragmentAthanToneImageButtonStyle" />

            <TextView
                style="@style/FragmentAthanToneTextStyle"
                android:text="@string/text_alarm_tone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_athan_alarm_silent"
            style="@style/FragmentAthanSilentViewStyle"
            app:layout_constraintEnd_toStartOf="@id/radio_group_athan_alarm_type"
            app:layout_constraintRight_toLeftOf="@+id/radio_group_athan_alarm_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_athan_alarm_tone">

            <ImageButton style="@style/FragmentAthanSilentImageButtonStyle" />

            <TextView
                style="@style/FragmentAthanSilentTextStyle"
                android:text="@string/text_alarm_silent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>